--- a/index.css
+++ b/index.css
@@ -32,3 +32,15 @@ td:nth-of-type(1){
 td:nth-of-type(2),td:nth-of-type(3){
     text-align: right;
 }
+
+@media screen and (max-width:480px) {
+
+	header{
+        font-size: 20px;
+    }
+
+    #grade {
+        width: 100%;
+    }
+
+}
