--- a/index.css
+++ b/index.css
@@ -33,10 +33,6 @@ td:nth-of-type(2),td:nth-of-type(3){
     text-align: right;
 }
 
-#enter {
-    border-radius: 100vh
-}
-
 @media screen and (max-width:480px) {
 
 	header{
@@ -47,7 +43,7 @@ td:nth-of-type(2),td:nth-of-type(3){
         width: 100%;
     }
 
-    #enter {
+    #enter, #post {
         text-align: center;
     }
 
